<resources>
    <string name="app_name">押运管理</string>
    <string name="version">版本号：</string>
    <string name="login">登 录</string>
    <string name="input_ip">请填写ip地址</string>
    <string name="input_port">请填写端口号</string>
    <string name="input_org_code">请填写机构编号</string>
    <string name="escort_manage">人员管理</string>
    <string name="car_manage">车辆管理</string>
    <string name="system_setting">系统设置</string>
    <string name="cancel">取消</string>
    <string name="save_logout">保存并退出</string>

    <string-array name="title">
        <item>@string/escort_manage</item>
        <item>@string/car_manage</item>
        <item>@string/system_setting</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>

</resources>
