<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:padding="@dimen/activity_padding">

    <ImageView
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="end"
        android:tint="@color/white"
        android:id="@+id/iv_config"
        android:src="@mipmap/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginTop="15dp"
        android:src="@mipmap/logo"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <fragment
        android:name="com.miaxis.esmanage.view.fragment.ConfigFragment"
        android:visibility="gone"
        android:id="@+id/fl_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </fragment>

    <android.support.v7.widget.CardView
        android:id="@+id/cd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/aero_light"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="@dimen/activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                style="@style/style_config_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/input_username"
                android:inputType="number"
                android:digits="1234567890"
                android:maxLength="6"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/style_config_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:hint="@string/input_pwd"
                android:inputType="numberPassword"
                android:maxLength="6"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_text_height" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@drawable/white_stroke_button_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_gravity="bottom"
        android:textColor="@color/gray"
        android:text="@string/version" />

</LinearLayout>